hover intent; deep container; white payor, patient popups on home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,10 +87,11 @@ Unknowns:
 	<!-- override the declarations in stylesheets/left_nav_popups.css now on Amazon S3 with a far forward expires header; may have to defeat overflow, and height-->
 	<style type="text/css">
 		.bold { font-weight: bold; }
+		/* tm-blue: #0094DE; orange:#FFA500 */
 		#popup_trumedical {top:44px; background-color:#0094DE; color:white; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; }
-		#popup_patients {top:44px; background-color:#FFA500; color:white; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; } 
-		#popup_providers {top:44px; background-color:#FFA500; color:white; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; }
-		#popup_payors {top:44px; background-color:#FFA500; color:white; padding-top:25px; padding-bottom:30px;height:auto; overflow:visible; }
+		#popup_patients {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; } 
+		#popup_providers {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; }
+		#popup_payors {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px;height:auto; overflow:visible; }
 		#popup_payors h2 { color: white; }
 
 	</style>
