--- a/public/stylesheets/trumedical_base.css
+++ b/public/stylesheets/trumedical_base.css
@@ -16,7 +16,7 @@
 	overflow-x: hidden;
 	width: 1085px; /* TA: freeze at 1052px to force right_column under left nav? ? */
 	margin:0px;
-	padding: 0px;
+	padding: 0px 0px 40px 0px; /* for pages deeper than window height; bottom 30px covered by footer */
 	background-color: white;/* DEBUGGING */
 	margin-left:auto; margin-right:auto;
 	}
