--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -69,6 +69,9 @@
 				<div><%= f.label "Clinic name" %><br />
 			  <%= f.text_field :clinic_name %></div>
 			
+				<div><%= f.label "Clinic id (for testing)" %><br />
+			  <%= f.text_field :clinic_id %></div>
+			
 				<div><%= f.label "Work phone" %><br />
 			  <%= f.telephone_field :phone %></div>
 			
