facebook twitter in tab

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -389,8 +389,8 @@
 					<!-- <a href="#">FAQs</a> -->
 				
 					<span style="color:white;">Find us on:</span> 
-					<a href="http://www.facebook.com/trumedical"><img src="../images/footer/facebook.png" width="16" height="16" alt="">&nbsp;Facebook</a> 
-					<a href="http://twitter.com/trumedical"><img src="../images/footer/twitter.png" width="16" height="16" alt="">&nbsp;Twitter</a>
+					<a target="_blank" href="http://www.facebook.com/trumedical"><img src="../images/footer/facebook.png" width="16" height="16" alt="">&nbsp;Facebook</a> 
+					<a target="_blank" href="http://twitter.com/trumedical"><img src="../images/footer/twitter.png" width="16" height="16" alt="">&nbsp;Twitter</a>
 					<!-- <a>&copy;TruMedical Solutions LLC, 2011</a> -->
 				</div>	
 			
