--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -79,6 +79,7 @@
 			  <%= f.text_field :extension %></div>
 								
 			  <div><%= f.submit "Register" %></div>
+				<i><span style="color:orange;">(Remember: You need to enter your current password above to confirm your changes.)</span></i>
 			<% end %>
 
 			<%= render :partial => "devise/shared/links" %>
