--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -227,8 +227,8 @@
 								<div class="for_text"><%= p.web_description %></div> <!-- need raw(..)? -->
 							</td>
 							<td class="price" id="price_<%= p.netsuite_item_no %>">
-								<%= if current_user 
-							  	case current_user.price_schedule
+								<%= if current_user.clinician 
+							  	case current_user.clinic.price_schedule
 										when "tru-blue"
 											number_to_currency(p.price_tru_blue)
 										when "corporate-2"
