--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -184,8 +184,8 @@
 							<tr>
 								<td>Price:</td>
 								<td class="price" id="price_<%= @product.netsuite_item_no %>">
-									<%= if current_user 
-								  	case current_user.price_schedule
+									<%= if current_user.clinician 
+								  	case current_user.clinic.price_schedule
 											when "tru-blue"
 												number_to_currency(@product.price_tru_blue)
 											when "corporate-2"
