--- a/app/views/product_sets/show.html.erb
+++ b/app/views/product_sets/show.html.erb
@@ -193,24 +193,27 @@
 										<div class="for_text"><%= p.web_description %></div> <!-- need raw(..)? -->
 									</td>
 									<td class="price" id="price_<%= p.netsuite_item_no %>">
-											<%= if current_user.clinician 
-										  	case current_user.clinic.price_schedule
-													when "tru-blue"
-														number_to_currency(p.price_tru_blue)
-													when "corporate-2"
-														number_to_currency(p.price_corporate_2)
-													when "corporate-3"
-														number_to_currency(p.price_corporate_3)
-													when "dealer-1"
-														number_to_currency(p.price_dealer_1)
-													when "dealer-2"
-														number_to_currency(p.price_dealer_2)
-													when "dealer-3"
-														number_to_currency(p.price_dealer_3)
-													else 
-														number_to_currency(p.price_clinic_list)
+											<%= if current_user then
+												if current_user.clinician 
+										  		case current_user.clinic.price_schedule
+														when "tru-blue"
+															number_to_currency(p.price_tru_blue)
+														when "corporate-2"
+															number_to_currency(p.price_corporate_2)
+														when "corporate-3"
+															number_to_currency(p.price_corporate_3)
+														when "dealer-1"
+															number_to_currency(p.price_dealer_1)
+														when "dealer-2"
+															number_to_currency(p.price_dealer_2)
+														when "dealer-3"
+															number_to_currency(p.price_dealer_3)
+														else 
+															number_to_currency(p.price_clinic_list)
+													end
+												else
+													number_to_currency(p.price_clinic_list);
 												end
-
 											else
 												number_to_currency(p.price_clinic_list);
 											end %>
