--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -219,35 +219,35 @@
 						<th align="left">Model</th>
 						<th align="right">Price</th>
 						<th align="left">Qty</th>
-						
-					<% @product_type.products.each do |p| %>
-						<tr>
-							<td><%= p.tms_part_no %></td>
-							<td class="description">
-								<div class="for_text"><%= p.web_description %></div> <!-- need raw(..)? -->
-							</td>
-							<td class="price" id="price_<%= p.netsuite_item_no %>">
-								<%= if current_user.clinician 
-							  	case current_user.clinic.price_schedule
-										when "tru-blue"
-											number_to_currency(p.price_tru_blue)
-										when "corporate-2"
-											number_to_currency(p.price_corporate_2)
-										when "corporate-3"
-											number_to_currency(p.price_corporate_3)
-										when "dealer-1"
-											number_to_currency(p.price_dealer_1)
-										when "dealer-2"
-											number_to_currency(p.price_dealer_2)
-										when "dealer-3"
-											number_to_currency(p.price_dealer_3)
-										else 
-											number_to_currency(p.price_clinic_list)
-									end
-								
-								else
-									number_to_currency(p.price_clinic_list);
-								end %>
+						<% @product_type.products.each do |p| %>
+							<tr>
+								<td><%= p.tms_part_no %></td>
+								<td><%= p.description %></td>
+								<td class="price" id="price_<%= p.netsuite_item_no %>">
+									<%= if current_user then
+										if current_user.clinician 
+								  		case current_user.clinic.price_schedule
+												when "tru-blue"
+													number_to_currency(p.price_tru_blue)
+												when "corporate-2"
+													number_to_currency(p.price_corporate_2)
+												when "corporate-3"
+													number_to_currency(p.price_corporate_3)
+												when "dealer-1"
+													number_to_currency(p.price_dealer_1)
+												when "dealer-2"
+													number_to_currency(p.price_dealer_2)
+												when "dealer-3"
+													number_to_currency(p.price_dealer_3)
+												else 
+													number_to_currency(p.price_clinic_list)
+											end
+										else
+											number_to_currency(p.price_clinic_list);
+										end
+									else
+										number_to_currency(p.price_clinic_list);
+									end %>	
 							</td>
 							<td style="padding-top:0px;"><input class="ui-corner-all" id="qty_<%= p.netsuite_item_no %>" style="width:30px;" type="text"></td>
 						</tr>
