--- a/app/views/base_products/show.html.erb
+++ b/app/views/base_products/show.html.erb
@@ -176,7 +176,7 @@
 							</td>
 							<td class="price" id="price_<%= p.netsuite_item_no %>">
 								<%= 
-								if current_user then
+								if user_signed_in? then
 									if current_user.clinician 
 							  		case current_user.clinic.price_schedule
 											when "tru-blue"
