--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -130,8 +130,7 @@
 				/* reset footer left on window resize events */
 				$(window).resize(function(){
 					$("#footer").css({"left": $("#container").offset().left}); /* reset footer left  */
-					var newDepth = $("window").height();
-					$("#container").css({"height": newDepth}); /* make container as deep as the window;  */
+					$("#container").css({"height": $(window).height() }); /* make container as deep as the window;  */
 				});
 				
 				$("div#contactUs").dialog( { autoOpen:false, modal:true, position:[360,60], width:610, minHeight:200, title:"Contact Us" });
