--- a/app/views/product_sets/show.html.erb
+++ b/app/views/product_sets/show.html.erb
@@ -193,7 +193,7 @@
 										<div class="for_text"><%= p.web_description %></div> <!-- need raw(..)? -->
 									</td>
 									<td class="price" id="price_<%= p.netsuite_item_no %>">
-											<%= if current_user then
+											<%= if user_signed_in? then
 												if current_user.clinician 
 										  		case current_user.clinic.price_schedule
 														when "tru-blue"
