registration working again

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -72,6 +72,27 @@
 				<div><%= f.label "Clinic id (for testing)" %><br />
 			  <%= f.text_field :clinic_id %></div>
 			
+				<div><%= f.label "Customer Id (for testing)" %><br />
+			  <%= f.text_field :customer_id %></div>
+			
+				<div><%= f.label "Internal Customer Id (for testing)" %><br />
+			  <%= f.text_field :internal_customer_id %></div>
+			
+				<div><%= f.label "Street Address" %><br />
+			  <%= f.text_field :address %></div>
+			
+				<div><%= f.label "Street Address(2)" %><br />
+			  <%= f.text_field :address2 %></div>
+			
+				<div><%= f.label "City" %><br />
+			  <%= f.text_field :city %></div>
+			
+				<div><%= f.label "State" %><br />
+			  <%= f.text_field :state%></div>
+			
+				<div><%= f.label "Zip Code (5-digit)" %><br />
+			  <%= f.text_field :zip %></div>
+			
 				<div><%= f.label "Work phone" %><br />
 			  <%= f.telephone_field :phone %></div>
 			
