--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,8 @@
     	<!-- <%# stylesheet_link_tag "jquery_tools_tabs_no_images.css" %> unused; used by Mavic tabbed sibling nav; not in /public/javascripts -->
 		<%= stylesheet_link_tag "left_nav_popups_test.css" %> <!-- added by TA 1/4/2012; controls top alignment of popups for menu items -->
 		<%= stylesheet_link_tag "simple_form.css" %>
+		<%= stylesheet_link_tag "formtastic.css" %>
+		<%= stylesheet_link_tag "formtastic_changes.css" %>
 		<%= stylesheet_link_tag "tipTip.css" %>
 		
 		<!-- standard js files -->
@@ -49,6 +51,8 @@
 		<!-- <%# javascript_include_tag :defaults %> <!-- included because StackOverflow response to sign_out delete problem; causing other problems: attempts to link prototype libraries -->	
 		<%= javascript_include_tag "jquery.tipTip.js" %>
 		<%= javascript_include_tag "jquery.intent.6.js" %> 
+		<%= javascript_include_tag "jquery.dataTables.js" %> 
+		
 			
 		<%= javascript_include_tag "ezMark.js" %> <!-- needed on home page; why? -->
 		
@@ -343,15 +347,22 @@
 			<div id="header">
 				<div id="register_login">
 					<ul>
-						<li><a href="https://checkout.netsuite.com/app/center/nlvisitor.nl/c.1114349/sc.6/.f">Administer</a></li>
+					
 						<% if user_signed_in? %>
+							
 							<li>
-								<span style="color:orange";>Signed in as <%= current_user.email %>. Not you?&nbsp; </span>
+								<span style="color:orange";>Signed in as <%= current_user.email %>.&nbsp;&nbsp; </span>
 								<%= link_to "Sign out", destroy_user_session_path %>
 							</li>
 							<li>
 								<%= link_to "My Account", edit_user_registration_path %>
 							</li>
+							<% if current_user.administrator? %>				
+									<li>
+										<%= link_to "Administer Clinic", edit_clinic_path(current_user.clinic.id) %>
+										<!--<a href="https://checkout.netsuite.com/app/center/nlvisitor.nl/c.1114349/sc.6/.f">Administer</a> -->
+									</li>
+							<% end %>
 						<% else %>
 							<li>
 								<%= link_to "Register", new_user_registration_path %> or <%= link_to "Sign in",  new_user_session_path %>
