--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,12 +42,13 @@
 		<%= stylesheet_link_tag "formtastic.css" %>
 		<%= stylesheet_link_tag "formtastic_changes.css" %>
 		<%= stylesheet_link_tag "tipTip.css" %>
+		<!-- <#= stylesheet_link_tag "jquery_tools_tabs.css" %> -->
 		
 		<!-- standard js files -->
 		<%= javascript_include_tag "jquery-1.4.4.min.js" %>
 		<!-- <%# javascript_include_tag "jquery-ui-1.8.10.custom.min.js" %> -->
 		<%= javascript_include_tag "jquery-ui-1.8.18.custom.min.js" %>
-		<%= javascript_include_tag "jQuery_Tools.1.2.3.scrollable.js" %> 
+		<!-- <#= javascript_include_tag "jquery.tools.min.js" %> -->
 		<!-- <%# javascript_include_tag :defaults %> <!-- included because StackOverflow response to sign_out delete problem; causing other problems: attempts to link prototype libraries -->	
 		<%= javascript_include_tag "jquery.tipTip.js" %>
 		<%= javascript_include_tag "jquery.intent.6.js" %> 
