--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -69,32 +69,33 @@
 
 					  <div><%= f.label :current_password %> <i><span style="color:orange;">(We need your current password to confirm your changes.)</span></i><br />
 					  <%= f.password_field :current_password %></div>
-					
+					<!--
 						<div><%= f.label "Are you a clinician? " %><br />
-					  <%= f.check_box :clinician %></div>
+					  <#= f.check_box :clinician %></div>
 					
 						<div><%= f.label "Clinic name" %><br />
-					  <%= f.text_field :clinic_name %></div>
-
-						<div><%= f.label "Clinic id (for testing)" %><br />
-					  <%= f.text_field :clinic_id %></div>					
-					
+					  <#= f.text_field :clinic_name %></div>
+				
+						<div><#= f.label "Clinic id" %><br />
+					  <#= f.text_field :clinic_id %></div>					
+			
 						<div><%= f.label "Work phone" %><br />
-					  <%= f.telephone_field :phone %></div>
+					  <#= f.telephone_field :phone %></div>
 					
 					  <div><%= f.label "Extension (if any)" %><br />
-					  <%= f.text_field :extension %></div>
+					  <#= f.text_field :extension %></div>
 					
-					
-						<div><%= f.label "Price Schedule ( for testing )" %><br />
-					  <%= f.text_field :price_schedule %></div>
-
+			
+						<div><#= f.label "Price Schedule ( for testing )" %><br />
+					  <#= f.text_field :price_schedule %></div>
+					-->
 					  <div><%= f.submit "Update" %></div>
 						<i><span style="color:orange;">(Remember: You need to enter your current password above to confirm your changes.)</span></i>
 
 					<% end %>
-
-					<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+					<!--
+					<p>Unhappy?<#= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+				-->
 					<%= link_to "Back", :back %>
 					
 				</div> <!-- end div#devise_generated_content -->
